--- a/templates/User/Jouer/creer_partie.html.twig
+++ b/templates/User/Jouer/creer_partie.html.twig
@@ -1,28 +1,72 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    <div class="creerPartie-page">
+        <div class="row justify-content-between col-menu">
+            <div class="col">
+                <img src="{{ asset ('assets/images/logo.png') }}" class="logo">
+            </div>
+            <div class="col">
+                <ul id="menu-demo2">
+                    <li><a href="{{ path('user')}}">Mon compte <i class="fas fa-user fa-2x"></i></a>
+                        <ul>
+                            <li><a href="{{ path('change_email')}}">Changer email</a></li>
+                            <li><a href="{{ path('change_password')}}">Changer mot de passe</a></li>
+                            <li><a href="{{ path('administration')}}">Administration</a></li>
+                            <li><a href="{{ path('security_logout')}}">Deconnexion</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
-    <form action="{{ path('creer_partie') }}" method="post">
-        <div>
-            <label>Joueur 1</label>
-            <select name="joueur1">
-                {% for joueur in joueurs %}
-                    <option value="{{ joueur.id }}">{{ joueur.username }}</option>
-                {% endfor %}
-            </select>
-        </div>
-        <div>
-            <label>Joueur 2</label>
-            <select name="joueur2">
-                {% for joueur in joueurs %}
-                    <option value="{{ joueur.id }}">{{ joueur.username }}</option>
-                {% endfor %}
-            </select>
-        </div>
-        <div>
-            <input type="submit" value="Créer Partie">
-        </div>
-    </form>
+        <form action="{{ path('creer_partie') }}" method="post">
+            <div>
+                <label>Joueur 1</label>
+                <select name="joueur1">
+                    {% for joueur in joueurs %}
+                        <option value="{{ joueur.id }}">{{ joueur.username }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <p>VS</p>
+            <div>
+                <label>Joueur 2</label>
+                <select name="joueur2">
+                    {% for joueur in joueurs %}
+                        <option value="{{ joueur.id }}">{{ joueur.username }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div>
+                <input type="submit" value="Creer Partie" class="button-form">
+            </div>
+
+            <div class="row justify-content-between creerPartie_links">
+                <div class="col-4 col-creerPartie">
+                    <a href="{{ path('security_logout')}}" class="button-retour-creerPartie">Se deconnecter</a>
+                    <ul class="left">
+                        <li>
+                            <a href="{{ path('contact') }}">Nous contacter</a>
+                        </li>
+                        <li>
+                            <a href="">Mentions legales</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-4">
+                    <ul class="regles">
+                        <li>
+                            <a href="">Regles</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </form>
+
+    </div>
+
+
 {% endblock %}
 
 {% block title %}
