--- a/templates/User/changepassword.html.twig
+++ b/templates/User/changepassword.html.twig
@@ -1,41 +1,58 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-        <img src="{{ asset ('assets/images/logo.png') }}" class="logo">
-
-    {{ form_start(form, {'attr': {'class': 'body-form'}}) }}
-        {{ form_row(form.oldPassword) }}
-        {{ form_row(form.plainPassword.first) }}
-        {{ form_row(form.plainPassword.second) }}
-
-<button type="submit" class="button-form">Changer mot de passe</button>
-{{ form_end(form) }}
-
-        <div class="row justify-content-between">
-                <div class="col-4">
-                        <a href="{{ path('index')}}" class="button-retour">Retour <img src="{{ asset ('assets/images/fleche.png') }}" class="fleche"></a>
-
-                        <ul class="left">
-                                <li>
-                                        <a href="">Nous contacter</a>
-                                </li>
-                                <li>
-                                        <a href="">Mentions legals</a>
-                                </li>
-                        </ul>
+        <div class="mdp-page">
+            <div class="row justify-content-between col-menu">
+                <div class="col">
+                    <img src="{{ asset ('assets/images/logo.png') }}" class="logo">
                 </div>
-                <div class="col-4">
-                        <ul class="right">
-                                <li>
-                                        <a href="">Mon compte</a>
-                                </li>
-                                <li>
-                                        <a href="">Regles</a>
-                                </li>
-                                <li>
-                                        <a href="">Reglages</a>
-                                </li>
-                        </ul>
+                <div class="col">
+                    <ul id="menu-demo2">
+                        <li><a href="{{ path('user')}}">Mon compte <i class="fas fa-user fa-2x"></i></a>
+                            <ul>
+                                <li><a href="{{ path('change_email')}}">Changer email</a></li>
+                                <li><a href="{{ path('change_password')}}">Changer mot de passe</a></li>
+                                <li><a href="{{ path('administration')}}">Administration</a></li>
+                                <li><a href="{{ path('security_logout')}}">Deconnexion</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            {{ form_start(form, {'attr': {'class': 'body-form'}}) }}
+                <fieldset>
+                        <label class="col-3">Ancien mot de passe</label> {{ form_widget(form.oldPassword, {'attr': {'class': 'col-8'}}) }}
+                </fieldset>
+                <fieldset>
+                        <label class="col-3">Nouveau mot de passe</label> {{ form_widget(form.plainPassword.first, {'attr': {'class': 'col-8'}}) }}
+                </fieldset>
+                <fieldset>
+                        <label class="col-3">Retaper le mot de passe</label> {{ form_widget(form.plainPassword.second, {'attr': {'class': 'col-8'}}) }}
+                </fieldset>
+
+                <button type="submit" class="button-form">Changer mot de passe</button>
+            {{ form_end(form) }}
+
+                <div class="row justify-content-between mdp_links">
+                        <div class="col-4 col-mdp">
+                                <a href="{{ path('user')}}" class="button-retour-mpd">Retour</a>
+                                <ul class="left">
+                                        <li>
+                                                <a href="{{ path('contact') }}">Nous contacter</a>
+                                        </li>
+                                        <li>
+                                                <a href="">Mentions legales</a>
+                                        </li>
+                                </ul>
+                        </div>
+                        <div class="col-4">
+                                <ul class="regles">
+                                        <li>
+                                            <a href="{{ asset ('assets/images/regles-stone-conquest.pdf') }}">Regles</a>
+                                        </li>
+                                </ul>
+                        </div>
                 </div>
         </div>
 
