--- a/templates/register.html.twig
+++ b/templates/register.html.twig
@@ -2,9 +2,10 @@
 
 {% block body %}
 
-    <img src="{{ asset ('assets/images/logo.png') }}" class="logo">
+    <div class="registration-page">
+        <img src="{{ asset ('assets/images/logo.png') }}" class="logo">
 
-    {{ form_start(form, {'attr': {'class': 'body-form'}}) }}
+        {{ form_start(form, {'attr': {'class': 'body-form'}}) }}
         <fieldset>
             <label class="col-3">Nom</label> {{ form_widget(form.fullname, {'attr': {'class': 'col-8'}}) }}
         </fieldset>
@@ -22,33 +23,29 @@
         </fieldset>
 
         <button type="submit" class="button-form">Inscription</button>
-    {{ form_end(form) }}
+        {{ form_end(form) }}
 
-    <div class="row justify-content-between">
-        <div class="col-4">
-            <a href="{{ path('index')}}" class="button-retour">Retour <img src="{{ asset ('assets/images/fleche.png') }}" class="fleche"></a>
+        <div class="row justify-content-between registration_links">
+            <div class="col-4 col-registration">
+                <a href="{{ path('index')}}" class="button-retour-registration">Retour</a>
+                <ul class="left">
+                    <li>
+                        <a href="">Nous contacter</a>
+                    </li>
+                    <li>
+                        <a href="">Mentions legals</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-4">
+                <ul class="regles">
+                    <li>
+                        <a href="{{ asset ('assets/images/regles-stone-conquest.pdf') }}">Regles</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
-            <ul class="left">
-                <li>
-                    <a href="">Nous contacter</a>
-                </li>
-                <li>
-                    <a href="">Mentions legals</a>
-                </li>
-            </ul>
-        </div>
-        <div class="col-4">
-            <ul class="right">
-                <li>
-                    <a href="">Mon compte</a>
-                </li>
-                <li>
-                    <a href="">Regles</a>
-                </li>
-                <li>
-                    <a href="">Reglages</a>
-                </li>
-            </ul>
-        </div>
     </div>
+
 {% endblock body %}
