--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -501,6 +501,73 @@ a.button-retour-admin:hover{
 }
 
 
+/* ------ EDIT ADMINISTRATION ------*/
+.editAdmin-page{
+    margin: 0;
+    background-image: url('../images/background.png');
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.editAdmin-page .edit_links{
+    width: 100%;
+    padding: 1px;
+    color: #ffffff;
+    position: fixed;
+    bottom: 0;
+    margin-left: 0 !important;
+    margin-right: auto;
+}
+
+a.button-retour-edit{
+    margin-top: 70px !important;
+    padding: 30px 220px 30px 30px;
+    background-color: rgba(255, 255, 255, 0.7);
+    color: #9a9690;
+    font-size: 20px;
+    display: -webkit-inline-box;
+}
+
+a.button-retour-edit:hover{
+    margin-top: 70px !important;
+    padding: 30px 240px 30px 35px;
+    background-color: rgb(255, 255, 255);
+    color: #f3ac27;
+    font-size: 20px;
+    display: -webkit-inline-box;
+    box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.81);
+}
+
+.editAdmin-page button.button-form{
+    margin-top: 10px !important;
+    border: #f3ac27 1px solid;
+    color: #f3ac27;
+    background-color: transparent;
+    font-family: "Stupid Meeting";
+}
+
+
+
+.editAdmin-page button.button-form:hover{
+    margin-top: 10px !important;
+    border: #f3ac27 1px solid;
+    color: white;
+    background-color: #f3ac27;
+    font-family: "Stupid Meeting";
+}
+
+.editAdmin-page .regles{
+    margin-top: 180px !important;
+}
+
+.editAdmin-page select{
+    display: inline-block;
+    margin-top: 20px;
+}
+
+
 /* ------ CREER PARTIE ------*/
 .creerPartie-page{
     margin: 0;
@@ -766,9 +833,9 @@ a.button-retour-liPartie:hover{
 }
 
 img.logo{
-     width: 100px;
-     margin: 20px 40px;
- }
+    width: 100px;
+    margin: 20px 40px;
+}
 
 .row{
     margin: 0 !important;
