--- a/templates/Admin/edit.html.twig
+++ b/templates/Admin/edit.html.twig
@@ -1,39 +1,65 @@
-{% extends 'base.html.twig' %}
+% extends 'base.html.twig' %}
 
 {% block body %}
 
-    <img src="{{ asset ('assets/images/logo.png') }}" class="logo">
+    <div class="editAdmin-page">
 
-    {{ form_start(form, {'attr': {'class': 'body-form'}}) }}
-    <fieldset>
-        <label class="col-3">Nom</label> {{ form_widget(form.fullname, {'attr': {'class': 'col-8'}}) }}
-    </fieldset>
-    <fieldset>
-        <label class="col-3">Pseudo</label> {{ form_widget(form.username, {'attr': {'class': 'col-8'}}) }}
-    </fieldset>
-    <fieldset>
-        <label class="col-3">Adresse Email</label> {{ form_widget(form.email, {'attr': {'class': 'col-8'}}) }}
-    </fieldset>
-    <fieldset>
-        <label class="col-3">Role</label> {{ form_widget(form.roles, {'attr': {'class': 'col-8'}}) }}
-    </fieldset>
+        <div class="row justify-content-between col-menu">
+            <div class="col">
+                <img src="{{ asset ('assets/images/logo.png') }}" class="logo">
+            </div>
+            <div class="col">
+                <ul id="menu-demo2">
+                    <li><a href="{{ path('user')}}">Mon compte <i class="fas fa-user fa-2x"></i></a>
+                        <ul>
+                            <li><a href="{{ path('change_email')}}">Changer email</a></li>
+                            <li><a href="{{ path('change_password')}}">Changer mot de passe</a></li>
+                            <li><a href="{{ path('administration')}}">Administration</a></li>
+                            <li><a href="{{ path('security_logout')}}">Deconnexion</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        {{ form_start(form, {'attr': {'class': 'body-form'}}) }}
+        <fieldset>
+            <label class="col-3">Nom</label> {{ form_widget(form.fullname, {'attr': {'class': 'col-8'}}) }}
+        </fieldset>
+        <fieldset>
+            <label class="col-3">Pseudo</label> {{ form_widget(form.username, {'attr': {'class': 'col-8'}}) }}
+        </fieldset>
+        <fieldset>
+            <label class="col-3">Adresse Email</label> {{ form_widget(form.email, {'attr': {'class': 'col-8'}}) }}
+        </fieldset>
+        <fieldset>
+            <label class="col-3">Role</label> {{ form_widget(form.roles, {'attr': {'class': 'col-8'}}) }}
+        </fieldset>
 
-    <button type="submit" class="button-form">Modifier</button>
-    {{ form_end(form) }}
+        <button type="submit" class="button-form">Modifier</button>
+        {{ form_end(form) }}
 
-    <div class="row justify-content-between">
-        <div class="col-4">
-            <a href="{{ path('index')}}" class="button-retour">Retour <img src="{{ asset ('assets/images/fleche.png') }}" class="fleche"></a>
-
-            <ul class="left">
-                <li>
-                    <a href="">Nous contacter</a>
-                </li>
-                <li>
-                    <a href="">Mentions legals</a>
-                </li>
-            </ul>
+        <div class="row justify-content-between edit_links">
+            <div class="col-4 col-edit">
+                <a href="{{ path('index')}}" class="button-retour-edit">Retour</a>
+                <ul class="left">
+                    <li>
+                        <a href="{{ path('contact') }}">Nous contacter</a>
+                    </li>
+                    <li>
+                        <a href="">Mentions legales</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-4">
+                <ul class="regles">
+                    <li>
+                        <a href="{{ asset ('assets/images/regles-stone-conquest.pdf') }}">Regles</a>
+                    </li>
+                </ul>
+            </div>
         </div>
 
     </div>
+
+
 {% endblock body %}
